syntax = "proto3";

package pcbook.v1;

option go_package = "github.com/kittichanr/pcbook/proto";

import "proto/pcbook/v1/memory_message.proto";

message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}