syntax = "proto3";

package pcbook.v1;

option go_package = "github.com/kittichanr/pcbook/proto";

import "proto/pcbook/v1/laptop_message.proto";

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {}
}
